# magisterium

./: .gitignore  CLAUDE.md  Justfile  pyproject.toml
clerge/: README.md
clerge/_metadata/: cas_frontiere.json  cleric_documents.json  document_authors.jsonl  document_authors_unresolved.jsonl  manual_overrides.yaml  obedience_changes.json  ordinations.jsonl  pretres_ordinateurs_unresolved.json  stats.json  tradi_scraping_notes.md  tradi_sources.md  wikidata_pretres_eveques_caches.jsonl
clerge/eveques/: 321-ukasz-baraniecki.yaml  321-ukasz-kali-324-ski.yaml  321-ukasz-krzysztof-wielewiejski.yaml  346-cibor-z-go-347-cie-324-czyc.yaml  346-cibor-z-radymina.yaml  346-wi-281-tos-322-aw-jaroslai-o-carm.yaml  352-imun-erd-337-dy.yaml  352-imun-milinovi-263-o-f-m-obs.yaml  352-imun-vosi-263-vossich.yaml  352-tefan-da-trnava-o-s-p-p-e.yaml  aage-jepsen-sparre.yaml  aaron-d-auxerre.yaml  aaron.yaml  abbon-de-troyes.yaml  abbon.yaml  (+60029 more)
site/: CONTRIBUTING-QR.md  QUESTIONS-TODO.md  README.md  astro.config.mjs  netlify.toml  package-lock.json  package.json
tools/: __init__.py  _batch_prepare.py  backfill_ouvrages.py  build_concordance.py  build_index.py  clean_corpus.py  clerge_annotate_rite.py  clerge_apply_obediences.py  clerge_fetch_photos.py  clerge_finalize_pretres.py  clerge_integrate_wikidata_pretres.py  clerge_link_documents.py  clerge_post_ch_run.sh  clerge_reconcile.py  complete_translations.py  fetch_extra_post_v2.py  migrate_to_traductions.py  repair_broken.py  stats.py  strip_lang_nav.py  translate_apply.py  translate_orchestrate.py  translate_scan.py  validate.py
(+34671 files in other folders)
